# ADK-cc

./: .gitignore  Claude.md  README.md  agents-cli-manifest.yaml  main.py  pyproject.toml  skills-lock.json
.claude/: settings.json  settings.local.json
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.yml  setup-statusline.sh  statusline-command.sh
app/: agent.py  fast_api_app.py
app/app_utils/: telemetry.py  typing.py
app/prompts/: root_agent_instruction.md
app/skills/: README.md
app/skills/compose-html-slides/: SKILL.md
app/skills/compose-html-slides/references/: check_prose_verbatim.py  template.html
app/skills/compose-pptx/: SKILL.md
app/skills/compose-pptx/scripts/: add_chart.py  clone_grid.py  fill_table.py  fill_text.py  inspect_template.py  render_template_thumbnails.py  set_chart_data.py  set_image.py  set_notes.py  slide_order.py
app/skills/compose-pptx/scripts/office/: pack.py  soffice.py  unpack.py  yaml_entry.py
app/skills/compose-slide-narrative/: SKILL.md
app/skills/compose-slide-narrative/references/: example_narrative.md  narrative_format.md  source_verification.md
app/skills/narrative-to-slide-outline/: SKILL.md
app/skills/narrative-to-slide-outline/references/: example_output.yaml  slide_yaml_schema.md
docs/: oauth-localhost-portforward.md  plan.md
docs/plans/: drive-mcp-migration-plan.md
