[project]
name = "cc-dev-container"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=2.0.0b1",
]

[dependency-groups]
dev = [
    "google-agents-cli>=0.1.3",
]

[tool.agents-cli]
agent_directory = "app"

[tool.agents-cli.create_params]
deployment_target = "none"
