[project]
name = "cc-dev-container"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "gcsfs>=2024.11.0",
    "google-adk[mcp]>=2.2.0",
    "google-cloud-aiplatform[agent-engines,evaluation]>=1.130.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "protobuf>=6.31.1,<7.0.0",
]

[dependency-groups]
dev = [
    "google-agents-cli>=0.5.0",
]

